[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/scenes/editor_splash/EditorSplash.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/DefaultGodotTheme/GodotTheme.tres" type="Theme" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Spin"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ), Vector2( 1.5, 1.5 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Blinking"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.501961 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Appear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:custom_constants/separation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 0.5, 1 ),
"update": 0,
"values": [ 128, 128, 16 ]
}

[node name="EditorSplash" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingVbox" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -35.0
margin_right = 64.0
margin_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="Panel/LoadingVbox"]
margin_top = 168.0
margin_right = 128.0
margin_bottom = 190.0
text = "Please wait..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBox" type="ColorRect" parent="Panel/LoadingVbox"]
margin_left = 48.0
margin_top = 206.0
margin_right = 80.0
margin_bottom = 238.0
rect_min_size = Vector2( 32, 32 )
rect_pivot_offset = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 0
color = Color( 0.545098, 0.545098, 0.545098, 1 )

[node name="SpinAnim" type="AnimationPlayer" parent="Panel/LoadingVbox/ProgressBox"]
autoplay = "Spin"
anims/Spin = SubResource( 1 )

[node name="LoadingLabel" type="Label" parent="Panel/LoadingVbox"]
margin_top = 254.0
margin_right = 128.0
margin_bottom = 276.0
text = "Loading..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlinkingAnim" type="AnimationPlayer" parent="Panel/LoadingVbox/LoadingLabel"]
autoplay = "Blinking"
anims/Blinking = SubResource( 2 )

[node name="ProgressBar" type="ProgressBar" parent="Panel/LoadingVbox"]
margin_top = 292.0
margin_right = 128.0
margin_bottom = 306.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 4

[node name="AppearAnim" type="AnimationPlayer" parent="Panel/LoadingVbox"]
autoplay = "Appear"
anims/Appear = SubResource( 3 )

[node name="LoadDoneCheckTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true
[connection signal="timeout" from="LoadDoneCheckTimer" to="." method="_on_LoadDoneCheckTimer_timeout"]
